src/test/deca/context/valid/non_provided/if_else.deca
// Description:
//    Utilisation de l'intruction if-else
//
// Resultats:
//    
// 
// Historique:
//    cree le 14/01/2020

{
    int a;
    float b;
    boolean c = true;
    if(true) {
        a = 3;
        println("a = ", a);
    }
    else {
        b = 7.3;
        println("b = ", b);
    }
}